FPET-1294 appinsights logs issue fix (#3051)